# computacao-em-nuvem

./: Cargo.toml  config.toml.example
migrations/2024-08-20-202454_initial/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/db/db_context/: mod.rs  order_db_context.rs  user_db_context.rs  user_token_db_context.rs
src/db/types/: order.rs  user.rs
src/errors/: db_error.rs
src/middleware/: allowed_roles.rs  auth.rs  mod.rs
src/models/: app_state.rs  config.rs  mod.rs  token_data.rs  user_role.rs
src/routes/: mod.rs
src/routes/admin/: mod.rs
src/routes/admin/order/: get_attachment.rs  list_undelivered.rs  mark_delivered.rs  mod.rs
src/routes/admin/order/errors/: get_attachment_error.rs  mod.rs
src/routes/auth/: login.rs  mod.rs  register.rs
src/routes/auth/errors/: login_error.rs  mod.rs  register_error.rs
src/routes/order/: create_order.rs  list_my_orders.rs  mod.rs
src/routes/order/errors/: create_order_error.rs  mod.rs
src/routes/user/: logout.rs  mod.rs
src/util/: mod.rs  oci_sign.rs
